# fastapi-board-api

./: .env.sample  .gitignore  alembic.ini  config.py  main.py  pyproject.toml
app/: application.py  models.py
app/services/: __init__.py  password.py
app/web/: __init__.py
app/web/user/: dtos.py  endpoints.py
database/: __init__.py  base.py  decorators.py  middlewares.py  session.py
database/migrations/: env.py
