[tool.poetry]
name = "fastapi-board-api"
version = "0.1.0"
description = ""
authors = ["jt201 <201@studio-jt.co.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.2"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
sqlalchemy = "^2.0.33"
alembic = "^1.13.2"
contextvars = "^2.4"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
